--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -204,7 +204,12 @@ RUN if [ "${BUILD_PYTORCH_OPS}" = "ON" ] || [ "${BUILD_TENSORFLOW_OPS}" = "ON" ]
  && if [ "${PACKAGE}" = "ON" ]; then make package; fi
 
 # Try importing open3d
-RUN python -c "import open3d; print(open3d)"
+# If CUDA is enabled, you need to have a CUDA device installed to run `import
+# open3d`, as the CPU pybind is not build. In wheel releases, both the CPU and
+# CUDA pybind are built.
+RUN if [ "${BUILD_CUDA_MODULE}" = "OFF" ]; then \
+        python -c "import open3d; print(open3d)"; \
+    fi
 
 # Compress ccache folder, move to / directory
 RUN ccache -s \
