--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,16 +38,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        SHARED: [ON, OFF]
-        STATIC_RUNTIME: [ON, OFF]
-        BUILD_CUDA: [ON, OFF]
-        CONFIG: [Release, Debug]
-        exclude:
-          - SHARED: ON
-            STATIC_RUNTIME: ON
-        include:
-          - BUILD_CUDA: ON
-            CUDA_VERSION: 11.0.3
+        SHARED: [OFF]
+        STATIC_RUNTIME: [OFF]
+        BUILD_CUDA: [OFF]
+        CONFIG: [Debug]
     env:
       BUILD_WEBRTC: ${{ ( matrix.SHARED == 'OFF' && matrix.STATIC_RUNTIME == 'ON' ) && 'ON' || 'OFF' }}
 
