initial SYCL build system and examples

--- a/3rdparty/benchmark/MakeAvailable/CMakeLists.txt
+++ b/3rdparty/benchmark/MakeAvailable/CMakeLists.txt
@@ -9,6 +9,8 @@ else()
     add_compile_definitions(_GLIBCXX_USE_CXX11_ABI=0)
 endif()
 
+add_compile_options($<$<CXX_COMPILER_ID:IntelLLVM>:-fno-fast-math>)
+
 FetchContent_MakeAvailable(ext_benchmark)
 
 # Set the cache vars introduced by the benchmark lib as advanced to not
