--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -69,6 +69,7 @@ open3d_add_example(ViewDistances)
 open3d_add_example(ViewPCDMatch)
 open3d_add_example(Visualizer)
 open3d_add_example(Voxelization)
+open3d_add_example(SYCLDemo)
 
 if (BUILD_GUI)
     open3d_add_example(Draw)
