--- a/cpp/open3d/t/geometry/CMakeLists.txt
+++ b/cpp/open3d/t/geometry/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(tgeometry PRIVATE
     TensorMap.cpp
     TriangleMesh.cpp
     VoxelBlockGrid.cpp
+    VtkUtils.cpp
 )
 
 open3d_show_and_abort_on_warning(tgeometry)
