--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ target_link_libraries(tests PRIVATE
     Open3D::3rdparty_jsoncpp
     Open3D::3rdparty_googletest
     Open3D::3rdparty_threads
+    Open3D::3rdparty_vtk
 )
 
 if (TARGET Open3D::3rdparty_openmp)
@@ -47,7 +48,6 @@ if (TARGET Open3D::3rdparty_openmp)
     )
 endif()
     
-target_include_directories(tests SYSTEM PRIVATE ${VTK_INCLUDE_DIRS})
 
 open3d_show_and_abort_on_warning(tests)
 open3d_set_global_properties(tests)
