--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,10 @@ CMakeSettings.json
 # CMake configured files
 cpp/open3d/Open3D.h
 cpp/open3d/Open3DConfig.h
+cpp/open3d/visualization/gui/Resource.cpp
+cpp/open3d/visualization/gui/Resource.h
 cpp/open3d/visualization/shader/Shader.h
 util/pip_package/setup.py
-cpp/open3d/visualization/gui/CompiledResources/
 
 # CMake temp file from Visual Studio
 CMakeSettings.json
