Doppler ICP python example and clean-up (#2)

--- a/cpp/open3d/io/CMakeLists.txt
+++ b/cpp/open3d/io/CMakeLists.txt
@@ -32,8 +32,8 @@ target_sources(io PRIVATE
     file_format/FileSTL.cpp
     file_format/FileTUM.cpp
     file_format/FileXYZ.cpp
+    file_format/FileXYZD.cpp
     file_format/FileXYZN.cpp
-    file_format/FileXYZND.cpp
     file_format/FileXYZRGB.cpp
 )
 
