--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -59,6 +59,12 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
+    env:
+      # Export everything from matrix to be easily used.
+      # Docker tag and ccache names must be consistent with docker_build.sh
+      CI_CONFIG          : openblas-arm64-py36-dev
+      GCE_INSTANCE_PREFIX: open3d-ci-openblas-arm64-py36-dev
+      CCACHE_TAR_NAME    : open3d-ci-openblas-arm64-py36-dev
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
@@ -68,6 +74,78 @@ jobs:
           cd "${GITHUB_WORKSPACE}/.."
           tar -czvf Open3D.tar.gz Open3D
           ls -alh
+      - name: GCloud CLI setup
+        uses: google-github-actions/setup-gcloud@v0.2.1
+        with:
+          version: ${{ env.GCE_CLI_GHA_VERSION }}
+          service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
+          project_id: ${{ secrets.GCE_PROJECT }}
+      - name: VM create
+        run: |
+          INSTANCE_NAME="${GCE_INSTANCE_PREFIX}-${GITHUB_SHA::8}"
+          INSTANCE_ZONES=(us-west1-a
+                          us-west1-b
+                          us-central1-a
+                          us-central1-b
+                          us-central1-f
+                          us-east1-c
+                          us-east1-d
+                          us-east4-b
+                          southamerica-east1-c
+                          europe-west2-b
+                          europe-west3-b
+                          europe-west4-b
+                          europe-west4-c
+                          europe-west2-a
+                          asia-southeast1-b
+                          asia-southeast1-c
+                          australia-southeast1-a)
+          # GCE only supports GPU on n1-standard (2020/07)
+          ZONE_ID=0
+          until ((ZONE_ID >= ${#INSTANCE_ZONES[@]})) ||
+            gcloud compute instances create "$INSTANCE_NAME" \
+              --zone="${INSTANCE_ZONES[$ZONE_ID]}" \
+              --accelerator="count=2,type=nvidia-tesla-t4" \
+              --maintenance-policy="TERMINATE" \
+              --machine-type=n1-standard-8 \
+              --boot-disk-size="128GB" \
+              --boot-disk-type="pd-ssd" \
+              --image-family="ubuntu-os-docker-gpu-2004-lts" \
+              --metadata-from-file=startup-script=./util/gcloud_auto_clean.sh \
+              --scopes="storage-full,compute-rw" \
+              --service-account="$GCE_GPU_CI_SA"; do
+              ((ZONE_ID = ZONE_ID + 1))
+          done
+          sleep 30
+          echo "GCE_ZONE=${INSTANCE_ZONES[$ZONE_ID]}" >> "${GITHUB_ENV}"
+          echo "INSTANCE_NAME=${INSTANCE_NAME}" >> "${GITHUB_ENV}"
+          exit $((ZONE_ID >= ${#INSTANCE_ZONES[@]})) # 0 => success
+      - name: VM copy code
+        run: |
+          gcloud compute scp \
+            "${GITHUB_WORKSPACE}/../Open3D.tar.gz" "${INSTANCE_NAME}":~ \
+            --zone "${GCE_ZONE}"
+          gcloud compute ssh "${INSTANCE_NAME}" \
+            --zone "${GCE_ZONE}" \
+            --command "ls -alh \
+                    && tar -xvzf Open3D.tar.gz \
+                    && ls -alh \
+                    && ls -alh Open3D \
+                    && nvidia-smi"
+      - name: VM ccache upload
+        if: ${{ github.ref == 'refs/heads/master' }}
+        run: |
+          gcloud compute ssh "${INSTANCE_NAME}" \
+            --zone="${GCE_ZONE}" \
+            --command="ls -alh \
+                    && gsutil cp ${CCACHE_TAR_NAME}.tar.gz gs://open3d-ci-cache/"
+
+      - name: VM delete
+        if: always()
+        run: |
+          gcloud compute instances delete "${INSTANCE_NAME}" --zone "${GCE_ZONE}"
+          ls -alh "${HOME}/.ssh"
+          gcloud compute os-login ssh-keys remove --key-file "${HOME}/.ssh/google_compute_engine.pub"
       # - name: Install QEMU dependencies
       #   run: |
       #     sudo apt-get update
